# robocup-home

./: README.md
all_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
all_msgs/msg/: Box.msg  Boxes.msg  Object.msg
all_msgs/srv/: send_box.srv  send_flags.srv  send_pos.srv  send_pose.srv
betracker/: CMakeLists.txt  CMakeLists.txt~  package.xml
betracker/config/: parameters.yaml
betracker/include/betracker_lib/: TFPoints.h  ukf.h
betracker/launch/: UKF.launch  object_detection.launch~  prepare.launch
betracker/src/: betracker_node.cpp  presentation.cpp  tracking.cpp  tracking.h
betracker/src/betracker_lib/: TFPoints.cpp  ukf.cpp
god_states_machine/: CMakeLists.txt  package.xml
god_states_machine/launch/: follow.launch  god.launch  god_watcher.launch  learning.launch  pickbag.launch  speech.launch  test.launch  test_follow.launch  yolo_prepare.launch
god_states_machine/launch/states_launch/: learn.launch  learn_track_prepare.launch  rviz_manipulation.launch  speech_manipulation.launch  track.launch
god_states_machine/scripts/: god_state_machine.py  main_sm.py  states_machine (copy).py  states_machine.py
god_watcher/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
god_watcher/include/: god_watcher (copy).h  god_watcher.h
god_watcher/launch/: god_watcher.launch  god_watcher_real.launch  god_watcher_real_client.launch  test.launch
god_watcher/src/: god_watcher (copy).cpp  god_watcher.cpp
manipulation/: CMakeLists.txt  package.xml
manipulation/config/: pick_and_place_params.yaml  pick_motions.yaml
manipulation/launch/: pick_demo.launch  pick_simulation.launch
manipulation/scripts/: pick_and_place_server.py  pick_client.py  spherical_grasps_server.py
navigation/: CMakeLists.txt  CMakeLists.txt~  package.xml
navigation/include/navigation/: simple_navigation_goals.h
navigation/launch/: navigation.launch
navigation/src/: .simple_navigation_goals.h.swp  simple_navigation_goals (copy).cpp  simple_navigation_goals (copy).h  simple_navigation_goals.cpp
operator_identify/: CMakeLists.txt  package.xml
operator_identify/launch/: yolobox.launch
operator_identify/src/: online-learning.cpp  yolo_box.cpp
operator_identify/test/: SIFT.cpp
perception/: CMakeLists.txt  package.xml
perception/include/: common.hpp
perception/launch/: perception.launch
perception/src/: DepthProcessing.cpp  cascade_person.cpp  depth2pointcloud.cpp  head_tracking.cpp  object_detection.cpp  online_collecting.cpp  online_learning.cpp  predict.cpp  predictshow.cpp  svm_trained.xml  yolo_roi.cpp
perception/test/: CMakeLists.txt
speech/src/tum_alle_athome_speech/: README.md
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_hotword/: CMakeLists.txt  README.md  package.xml
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_hotword/launch/: hotword_recogniser.launch
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_hotword/resources/: Bring.pmdl  Bring_previous.pmdl  Follow.pmdl  Follow_old.pmdl  Follow_previous.pmdl  Move.pmdl  No.pmdl  No_old.pmdl  Say.pmdl  Start.pmdl  Start_old.pmdl  Stop.pmdl  Stop_old.pmdl  Tiago.pmdl  Tiago_old.pmdl  Wait.pmdl  Yes.pmdl
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_hotword/src/: hotword-detect.py
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_localisation/: README.md
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_msgs/: CMakeLists.txt  package.xml
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_msgs/params/: tts.csv
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_msgs/srv/: srvGenerateAnswer.srv
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_nlp/: CMakeLists.txt  Makefile  README.md  package.xml  requirements_python2.txt  requirements_python3.txt
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_nlp/launch/: nlp.launch  speech_and_person.launch
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_nlp/scripts/: answers.py  generate_answer.py  intent.py  predefined.py  process_text.py
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_nlp/training/: training_nlp.csv  training_predefined.csv
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_nlp/training/AIML_bots/: README.md  competition.aiml  general.aiml  init.xml  time.aiml
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_recognition/: CMakeLists.txt  README.md  package.xml
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_recognition/language_models/: 4661.dic  4661.lm  4661.log_pronounce  4661.sent  4661.vocab  Names.xml  Objects.xml  howto  keyphrases.txt  language-model_4661-src.txt  predef.corpus  predef.lm  robocup.corpus
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_recognition/launch/: robocup_2017.launch  robocup_predef.launch
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_recognition/src/: recogniser.py
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_tts/: CMakeLists.txt  package.xml
speech/src/tum_alle_athome_speech/tum_alle_athome_speech_tts/scripts/: text_to_speech.py
tum_alle_common_msgs/: CMakeLists.txt  package.xml
tum_alle_common_msgs/msg/: msg2DPrediction.msg  msg2DRecognition.msg  msg3DPrediction.msg  msg3DRecognition.msg  msg3DTracking.msg  msgCategorisedSpeech.msg  msgFreeSpace.msg  msgGraspInfo.msg  msgHotwordCommand.msg  msgRegionOfInterest3D.msg
tum_alle_common_msgs/params/: params.yaml  shelves.yaml  topics.yaml
tum_alle_common_msgs/srv/: GraspSrv.srv  srvAnswerReasoning.srv  srvClusterPerson.srv  srvControlTracker.srv  srvCostmap.srv  srvCupboardDoor.srv  srvCupboardOrientation.srv  srvElection.srv  srvExtractProperty.srv  srvFreeSpace.srv  srvGetDepth.srv  srvGetFreeSpaces.srv  srvGetStableObjects.srv  srvInferFromList.srv  srvIsDoorOpen.srv  srvNavigation.srv  srvObjectNavigation.srv  srvObjectsClustering.srv  srvPerformTask.srv  srvPlanning.srv  srvSaveRecognition.srv  srvSpeechRecognition.srv  srvStableObjects.srv  srvStartPlanner.srv  srvTableObjects.srv  srvUpdateClusters.srv
