<?xml version="1.0"?>
<package>
  <name>tum_alle_athome_speech_recognition</name>
  <version>0.0.1</version>
  <description>The tum_alle_athome_speech_recognition package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="karinne@todo.todo">karinne</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/tum_alle_athome_speech_recognition</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <build_depend>tum_alle_common_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend><!-- only needed for demos -->
  <!--<run_depend>gstreamer0.10-pocketsphinx</run_depend>--><!-- for Ubuntu 14.04 -->
  <run_depend>gstreamer1.0-pocketsphinx</run_depend><!-- for Ubuntu 16.04 -->
  <run_depend>python-gst</run_depend>
  <run_depend>audio_common_msgs</run_depend>
  <run_depend>tum_alle_common_msgs</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
